# hezi

./: Cargo.toml  README.md
src/: lib.rs
src/archive/: archive_base.rs  codecs.rs  iso_archive.rs  macros.rs  mod.rs  nu_protocol_serialization.rs  sevenz_archive.rs  tar_archive.rs  zip_archive.rs
src/cli/: main.rs  nu.rs  styling.rs
src/nu_plugin/: from.rs  main.rs  plugin.rs
tests/fixtures/: test1.7z  test1.tar  test1.tar.bz2  test1.tar.lzma  test1.tar.xz  test1.tar.zst
tests/fixtures/test1/: file1.txt
